# eel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  config.py  config_cdt.bat  config_none_makefiles.bat  config_none_stm32f103rb_makefiles.bat  config_none_stm32f446ze_makefiles.bat  config_rtos_stm32f103rb_cdt.bat  config_rtos_stm32f446ze_cdt.bat  config_rtos_stm32f446ze_makefiles.bat  config_win.bat
cmake/: FindCMSIS.cmake  FindChibiOS.cmake  (+8 more)
src/: CMakeLists.txt  config_cdt.bat  config_chibios_makefiles.bat  config_makefiles.bat  config_win.bat
src/cmake/: ConfigToolchain.cmake  DefineCompilerFlags.cmake  FindCMSIS.cmake  FindChibiOS.cmake  FindEelHal.cmake  FindEelHalLL.cmake  FindEelUtil.cmake  FindFreeRTOS.cmake  FindOpenOCD.cmake  FindSTM32HAL.cmake  Toolchain.cmake  Utils.cmake
src/cmake/ChibiOS/: ChibiOS_RTOS.cmake
src/cmake/stm32/: stm32_toolchain.cmake
src/cmake/toolchain_helpers/: ConfigToolchain.cmake  DefineCompilerFlags.cmake  ParseMCUInfo.cmake
src/cmsis/common/: README.md
src/hal/: config.hh.in  critical_section.hh  gpio.cc  gpio.hh  hal.hpp  pin_in.hpp  pin_out.hpp  rcc.cc  rcc.hh  sys_tick_timer.cc  sys_tick_timer.hh  uart.hpp  usart.cc  usart.hh
src/hal/_temp/: gpio.cc  rcc.hh
src/hal/_temp/cortex/: lock.hh  sys_tick_timer.hh
src/hal/core/: critical_section.hh
src/hal/cortex/: lock.hh  sys_tick_timer.cc  sys_tick_timer.hh
src/hal/gpio/: gpio.hh
src/platform/: common_defs.hh  driver_dispatcher.hpp  eel_config.hpp.in  eel_hal_common_defs.hpp  hal_ll.hh  mcu.hh  platform.hpp
src/platform/_temp/: af_map.hh  hal_ll.hh  memory_map.hh
src/platform/_temp/stm32/f4/: af_map.hh
src/platform/_temp/stm32/ll/exti/: exti.cc  exti.hh
src/platform/_temp/stm32/ll/gpio/: gpio.hh
src/platform/_temp/stm32/ll/syscfg/: syscfg.cc  syscfg.hh
src/platform/_temp/stm32/ll/usart/: usart.cc  usart.hh
src/platform/stm32/: common.hpp  dma.cpp  dma.hpp  gpio.cpp  gpio.hpp  gpio_interrupt.cpp  gpio_interrupt.hpp  hal_ll.hpp  stm32_hal.hpp  uart.cpp  uart.hpp
src/platform/stm32/f1/: mcu_defs.hpp
src/platform/stm32/f4/: af_map.cc  af_map.hh  common_defs.hh  gpio.cc  gpio.hh  mcu_defs.hpp  memory_map.hh
src/platform/stm32/ll/exti/: exti.cc  exti.hh
src/platform/stm32/ll/gpio/: gpio.cc  gpio.hh
src/platform/stm32/ll/rcc/: rcc.cc  rcc.hh
src/platform/stm32/ll/usart/: usart.cc  usart.hh
src/samples/: CMakeLists.txt  basic_stream_buffer_test.hpp  event_group_test.hpp  mailbox_test.hpp  os_object_test.hpp  semaphore_from_isr_test.hpp  semaphore_test.hpp  sender_receiver_tasks.hpp  simple_task.hpp  stream_buffer_test.hpp  timer_test.hpp
src/samples/boards/stm32f103rb-nucleo/blinky/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f103rb-nucleo/blinky/config/: stm32f1xx_hal_msp.c  system_clock_config.hpp
src/samples/boards/stm32f103rb-nucleo/blinky_stm32/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f103rb-nucleo/blinky_stm32/config/: stm32f1xx_hal_conf.h
src/samples/boards/stm32f103rb-nucleo/gpio_interrupt/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f103rb-nucleo/gpio_interrupt/config/: stm32f1xx_hal_msp.c
src/samples/boards/stm32f103rb-nucleo/rtos/: CMakeLists.txt  basic_stream_buffer_test.cpp  event_group_test.cpp  free_rtos_task.cpp  mailbox_test.cpp  os_object_test.cpp  semaphore_from_isr_test.cpp  semaphore_test.cpp  sender_receiver_tasks.cpp  simple_task.cpp  timer_test.cpp
src/samples/boards/stm32f103rb-nucleo/rtos/config/: FreeRTOSConfig.h  stm32f1xx_hal_msp.c  stm32f1xx_it.c  stm32f1xx_it.h  system_clock_config.hpp
src/samples/boards/stm32f103rb-nucleo/usart/: CMakeLists.txt  io_stream.cpp  main.cpp
src/samples/boards/stm32f103rb-nucleo/usart_stm32/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f446ze-nucleo/blinky/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f446ze-nucleo/blinky_chibios/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f446ze-nucleo/blinky_stm32/: CMakeLists.txt
src/samples/boards/stm32f446ze-nucleo/blinky_temp/: CMakeLists.txt
src/samples/boards/stm32f446ze-nucleo/gpio_interrupt/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f446ze-nucleo/gpio_interrupt_stm32/: CMakeLists.txt  main.cpp
src/samples/boards/stm32f446ze-nucleo/rtos/: CMakeLists.txt  basic_stream_buffer_test.cpp  event_group_test.cpp  free_rtos_task.cpp  mailbox_test.cpp  os_object_test.cpp  semaphore_from_isr_test.cpp  semaphore_test.cpp  sender_receiver_tasks.cpp  simple_task.cpp  stream_buffer_test.cpp  timer_test.cpp
src/samples/boards/stm32f446ze-nucleo/usart/: CMakeLists.txt  gpio_interrupt.cc  io_stream.cc  io_stream.cpp  main.cpp  usart.cpp
src/samples/boards/stm32f446ze-nucleo/usart_stm32/: CMakeLists.txt  main.cpp
src/samples/win/free_rtos_samples/: CMakeLists.txt  free_rtos_basic_sample.cc  free_rtos_task.cc  free_rtos_task.cpp
src/samples/win/free_rtos_samples/free_rtos_config/: FreeRTOSConfig.h
src/samples/win/no_rtos/: CMakeLists.txt  io_stream_sample.cpp
src/samples/win/rtos/: CMakeLists.txt  os_object_test.cpp  sender_receiver_tasks.cpp  simple_task.cpp
src/samples/win/rtos/config/: FreeRTOSConfig.h
src/samples/win/util_samples/: CMakeLists.txt  io_stream_sample.cc
src/util/: bit_manip.hh  pair.hh  preprocessor.hh  types.hh
src/util/os/: task.cc  task.hh
src/util/os_wrapper/: queue.hh  task.cc  task.hh  ticks.hh
src/util/ports/pc/: console_device.cc  console_device.hh
src/util/streams/: io_device_interface.hh  io_device_wrapper.hh  io_stream.cc  io_stream.hh
src/utils/: bit_manip.hh  bit_manip.hpp  pair.hh  pair.hpp  preprocessor.hh  types.hh  types.hpp
src/utils/os_wrapper/: event_group.hpp  free_rtos_types.hh  free_rtos_types.hpp  mailbox.hpp  queue.hh  queue.hpp  semaphore.hpp  stream_buffer.hpp  task.cc  task.cpp  task.hh  task.hpp  ticks.hh  ticks.hpp  timer.cpp  timer.hpp
src/utils/ports/pc/: console_device.cc  console_device.cpp  console_device.hh  console_device.hpp
src/utils/streams/: io_device_interface.hh  io_device_interface.hpp  io_device_wrapper.hh  io_device_wrapper.hpp  io_stream.cc  io_stream.cpp  io_stream.hh  io_stream.hpp
(+14 files in other folders)
